# zoneos

./: .gitignore  API.md  README.md  REFACTORING.md  pyproject.toml  requirements.txt  system_d.config
.github/: copilot-instructions.md
src/zoneos/: api.py  config.py  controller.py  exceptions.py  favorites.py  groups.py  main.py  playback.py  sonos.py  speakers.py
static/: app.js  index.html
tests/: conftest.py  test_api.py  test_sonos.py  test_sonos_advanced.py
