[project]
name = "zoneos"
version = "0.1.0"
description = "A lightweight bridge between Sonos speakers, iPhone automations, and NFC stickers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "soco>=0.30.4",
    "flask>=3.0.0",
]

[project.scripts]
zoneos = "zoneos.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
